<resources>
    <string name="app_name">看护家SDK-2020-Kotlin版本</string>
    <string name="welcome">欢迎您！</string>
    <string name="action_share">分享</string>
    <string name="device">设备</string>
    <string name="deviceList">设备列表</string>
    <string name="discovery">发现</string>
    <string name="me">我的</string>
    <string name="erweima">二维码添加</string>
    <string name="zhilian">涂鸦设备通道</string>
    <string name="selectWIFI">选择wifi</string>
    <string name="wifi">设备需要连接的WIFI</string>
    <string name="nonsupport">设备暂不支持5G WiFi</string>
    <string name="chooseWiFi">选择网络</string>
    <string name="commonSet">通用设置</string>
    <string name="commonMessage">消息中心</string>
    <string name="commonHelp">帮助反馈</string>
    <string name="aboutUs">关于我们</string>
    <string name="tipVoice">听到提示音</string>
    <string name="unHeardVoice">未听到声音提示？</string>
    <string name="voiceTips">设备发出语音提示</string>
    <string name="deviceReady">请接通电源，按下设备上的复位按键，保持五秒钟，直到听到设备提示“复位成功”</string>
    <string name="BusyAndTryAgain">连接失败，点击重试</string>
    <string name="quitConnection">再按一次退出连接</string>
    <string name="login">登录</string>
    <string name="fast_register">立即注册</string>
    <string name="register">注册</string>
    <string name="forgetPWD">忘记密码?</string>
    <string name="remenberPWD">记住密码</string>
    <string name="enterPhoneNum">请输入手机号码</string>
    <string name="enterBindPhoneNum">请输入需要绑定的手机号码</string>
    <string name="getYanzhengma">获取验证码</string>
    <string name="commit">确定</string>
    <string name="userEmail">使用邮箱注册</string>
    <string name="repeatPWD">重复密码</string>
    <string name="inputPWD">输入密码</string>
    <string name="registerByPhone">手机注册</string>
    <string name="inputRightNum">请输入正确的手机号码</string>
    <string name="inputValidNum">请输入验证码</string>
    <string name="inputEmailAddress">请输入手机或邮箱地址</string>
    <string name="usePhone">使用手机注册</string>
    <string name="registerByEmail">邮箱注册</string>
    <string name="inputPhoneOrEmail">邮箱</string>
    <string name="playBack">回放</string>
    <string name="setting">设置</string>
    <string name="defence">布防</string>
    <string name="accountNoEmpty">账号不能为空！</string>
    <string name="inputEmailOrPhoneNum">请输入正确的邮箱或者手机号码</string>
    <string name="voice_on">进入监控默认开启声音</string>
    <string name="videoDifinition">监控默认清晰度</string>
    <string name="keepSilenceWhenPlayback">进入回放默认关闭声音</string>
    <string name="alarmShake">报警震动</string>
    <string name="music">报警铃声</string>
    <string name="chooseAlarmMusic">选择报警铃声</string>
    <string name="musicTime">铃声时长</string>
    <string name="myPhone">我的手机</string>
    <string name="myEmail">我的邮箱</string>
    <string name="modifyPwd">修改登录密码</string>
    <string name="PwdNotNULL">密码不能为空</string>
    <string name="RepeatPwdIncorrect">重复密码不正确</string>
    <string name="inputPwd">请输入APP登录密码</string>
    <string name="save">保存</string>
    <string name="bindEmail">绑定邮箱</string>
    <string name="ensureDelete">确定删除？</string>
    <string name="cancel">取消</string>
    <string name="deviceOffline">设备不在线</string>
    <string name="findPwd">找回密码</string>
    <string name="weHaveSendEmail">我们已经向您的邮箱发送了一份邮件，请通过邮件找回密码！</string>
    <string name="weHaveSendCode">我们已经将验证码发往您的邮箱，请通过邮件获取验证码！</string>
    <string name="film">影像</string>
    <string name="deleteFile">删除文件</string>
    <string name="allDevices">设备不限</string>
    <string name="allDate">日期不限</string>
    <string name="allDevice">设备不限</string>
    <string name="next">下一步</string>
    <string name="resend">重发</string>
    <string name="bindPhoneNumber">绑定手机号码</string>
    <string name="changePhoneNumber">更换手机号码</string>
    <string name="changeEmail">更换邮箱</string>
    <string name="unbindEmail">解绑邮箱</string>
    <string name="bindPhoneNumberSuccess">绑定手机号码成功</string>
    <string name="chooseNoPicture">没有选择任何影像</string>
    <string name="seconds">秒</string>
    <string name="WeHaveSendMessage">短信已发送，请注意查收</string>
    <string name="unbind">解绑</string>
    <string name="unbindSuccess">解绑成功</string>
    <string name="scanErweima">扫描二维码</string>
    <string name="searching">正在处理！</string>
    <string name="notNullUid">输入的UID长度错误</string>
    <string name="addSuccess">添加成功</string>
    <string name="appAccount">账号ID</string>
    <string name="startConfig">开始配置</string>
    <string name="configFailure">连接失败，请重试！</string>
    <string name="configSuccess">连接成功！</string>
    <string name="addDeviceFailure">添加设备失败，请确保网络连接正常！</string>
    <string name="addDeviceSuccess">添加设备成功！</string>
    <string name="logout">退出登录</string>
    <string name="inputRightEmail">请输入正确的邮箱地址</string>
    <string name="inputNewPhoneNumber">请输入正确的新手机号码</string>
    <string name="ensureChange">确定更换</string>
    <string name="processing">处理中...</string>
    <string name="addDevice">添加设备</string>
    <string name="addNewDevice">无线WIFI连接</string>
    <string name="addSharedDevice">添加分享设备</string>
    <string name="deviceName">设备名称</string>
    <string name="connectFailue">连接失败</string>
    <string name="passwordErrorResetDevice">密码错误,设备可能已被其他用户绑定，请复位设备后重新添加！</string>
    <string name="noAvailableNet">当前无网络连接，请打开网络</string>
    <string name="shareDevice">分享设备</string>
    <string name="shared">已分享</string>
    <string name="shareCode">分享码</string>
    <string name="shareAvailable">可分享</string>
    <string name="ensureUnbind">确认解绑并删除该设备吗？</string>
    <string name="ensureUnbindSharedDevice">确认删除这个被分享的设备？</string>
    <string name="shareManage">分享管理</string>
    <string name="connectTerminate">连接断开</string>
    <string name="addLanDevice">有线WLAN连接</string>
    <string name="inputShareCode">输入分享码添加</string>
    <string name="scanIt">请使用看护家APP扫描以下二维码来访问共享设备</string>
    <string name="video">视频</string>
    <string name="accontSetting">账号设置</string>
    <string name="commonSetting">通用设置</string>
    <string name="deviceInfo">设备信息</string>
    <string name="timeSet">时区设置</string>
    <string name="videoAndVoice">设备相册</string>
    <string name="netSet">网络设置</string>
    <string name="alarmSet">报警设置</string>
    <string name="recordSet">录像设置</string>
    <string name="deviceSetting">设备设置</string>
    <string name="firmwareVersion">固件版本</string>
    <string name="ip">局域网IP</string>
    <string name="mac">MAC地址</string>
    <string name="SetTimezone">设置时区</string>
    <string name="modifySuccess">修改成功</string>
    <string name="modifyFailure">修改失败</string>
    <string name="nameDevice">请给设备取名</string>
    <string name="scanQRcode">扫描二维码</string>
    <string name="search">搜索</string>
    <string name="failureAndRetry">添加设备失败，请重试或者重新复位</string>
    <string name="connectFailureAndRetry">添加设备失败，请重试</string>
    <string name="netMode">当前网络模式</string>
    <string name="connectedWifi">已连接wifi名称</string>
    <string name="networkSetting">网络设置</string>
    <string name="refresh">刷新</string>
    <string name="warning">警告</string>
    <string name="maybeDisconnectNetwork">操作不当可能造成设备断开连接，是否继续？</string>
    <string name="changeWifi">更改wifi：</string>
    <string name="inputWifiPWD">请输入wifi密码</string>
    <string name="readQRcodeError">解析二维码失败,分享格式错误</string>
    <string name="scanQRcodeFailure">扫码二维码失败</string>
    <string name="queryFailure">查询失败</string>
    <string name="addDeviceFirst">请先添加设备！</string>
    <string name="areYouSureUnshare">确认取消分享吗？</string>
    <string name="unshareDeviceSuccess">取消分享成功</string>
    <string name="unshareDeviceFailure">取消分享失败</string>
    <string name="filesChanged">文件目录发生变化，请重新开始</string>
    <string name="havenotlistenedvoice">未听到提示音？</string>
    <string name="pressresetbutton">请确认设备已上电，或者按下复位键后提示复位成功！</string>
    <string name="deviceprepared">设备就绪</string>
    <string name="sdcardNotAvailable">SD卡不可用</string>
    <string name="cannotChange">还未连接成功，无法切换</string>
    <string name="recordingCannotChange">录制视频时，无法切换分辨率</string>
    <string name="adminCanChange">管理员才能切换分辨率</string>
    <string name="cannotTakePhoto">还未连接成功，无法截图</string>
    <string name="noDevice">暂无设备</string>
    <string name="pleaseAddDevice">请点击右上角添加设备</string>
    <string name="sdcardCapacity">SD卡容量</string>
    <string name="sdcardFree">SD卡剩余容量</string>
    <string name="noSDcard">无SD卡</string>
    <string name="deviceSdcard">设备存储卡</string>
    <string name="phoneSdcard">手机内存</string>
    <string name="backLive">返回直播</string>
    <string name="queryError">查询出错</string>
    <string name="downloading">正在下载</string>
    <string name="errorOccured">下载出错</string>
    <string name="noRecorderVideo">当天没有视频</string>
    <string name="takePhotoSuccess">截图成功</string>
    <string name="takePhotoError">截图失败</string>
    <string name="select">选择</string>
    <string name="picture">图片</string>
    <string name="date">日期</string>
    <string name="finish">完成</string>
    <string name="delete">删除</string>
    <string name="clickToSelect">点击选择</string>
    <string name="selectALL">全选</string>
    <string name="noPictureToday">当天没有图片</string>
    <string name="autoCruise">自动巡航</string>
    <string name="noRecordedVideo">当前时间段没有录制的视频</string>
    <string name="recordPlan">录像计划</string>
    <string name="slectStartAndEndTime">请选择开始和结束时间</string>
    <string name="openTime">开启时间</string>
    <string name="closeTime">关闭时间</string>
    <string name="addPlan">添加计划</string>
    <string name="deviceOnOff">定时开关机</string>
    <string name="deletePlan">删除该计划</string>
    <string name="planRepeated">已有计划已经包含该时间段，请修改!</string>
    <string name="planInvalid">开关时间不能相同!</string>
    <string name="deviceSwitch">设备开关</string>
    <string name="deviceClosed">设备已关闭</string>
    <string name="pleaseConnectDevice">请先连接设备!</string>
    <string name="pleaseTurnOnDevice">请先开启设备!</string>
    <string name="appVersion">当前版本</string>
    <string name="updateVersion">版本更新</string>
    <string name="onlyOne">单台设备不能分屏查看</string>
    <string name="versionCheck">版本检测</string>
    <string name="haveNewVersion">有新版本</string>
    <string name="isNewest">已经是最新版</string>
    <string name="firmwareUpdate">固件升级</string>
    <string name="formatSdcard">格式化SD卡</string>
    <string name="apConnect">热点配网</string>
    <string name="notNullSSID">请选择需要连接的网络</string>
    <string name="scanToAdd">扫描二维码添加</string>
    <string name="notBind">未绑定</string>
    <string name="pwdCannotNull">密码不能为空</string>
    <string name="ApDevice">Ap设备</string>
    <string name="ensureFormatSdcard">确定删除所有数据并格式化SD卡吗？</string>
    <string name="formatSuccess">格式化成功</string>
    <string name="formatFailure">格式化失败</string>
    <string name="typeWifi">wifi模式</string>
    <string name="typeLine">有线模式</string>
    <string name="typeAp">热点模式</string>
    <string name="deviceConnecting">设备连接中...</string>
    <string name="heardConnectSuccess">听到“网络连接成功！”</string>
    <string name="ApMode">AP模式</string>
    <string name="tipMessage">提示：</string>
    <string name="alarm">报警</string>
    <string name="unbindAndDelete">解绑并删除设备</string>
    <string name="receiveAlarm">接受报警推送</string>
    <string name="moveDetect">移动侦测</string>
    <string name="setMoveSensitive">设置移动侦测灵敏度</string>
    <string name="reverseScreen">画面翻转</string>
    <string name="displayAndVolume">设备音量</string>
    <string name="addSensor">添加传感器</string>
    <string name="voiceDetect">声音侦测</string>
    <string name="deviceSound">设备报警声音</string>
    <string name="selfCheck">摄像头校准</string>
    <string name="emailAlarm">报警邮箱设置</string>
    <string name="vision">智能夜视</string>
    <string name="cry">婴儿哭声</string>
    <string name="object">物体检测</string>
    <string name="reboot">重启设备</string>
    <string name="nightMode">夜视模式</string>
    <string name="faceDetect">人脸检测</string>
    <string name="peopleDetect">人形检测</string>
    <string name="stopUpload">暂停云存储视频上传</string>
    <string name="alarmRing">自定义报警铃声</string>
    <string name="offlineUpdate">离线升级</string>
    <string name="downloadFirmware">下载固件包</string>
    <string name="alarmInterval">报警间隔</string>
    <string name="createQRcode">生成二维码</string>
    <string name="inputWifiPwd">输入WIFI密码</string>
    <string name="selectWifi">选择WIFI</string>
</resources>