<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/tv_selectWifi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/selectWifi" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/inputWifiPwd" />

    <Button
        android:id="@+id/btn_createQRcode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/createQRcode" />

    <ImageView
        android:id="@+id/iv_QrCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp" />

    <Button
        android:id="@+id/btn_deviceConnectSuccess"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/heardConnectSuccess"
        android:visibility="gone" />
</LinearLayout>
